force-app/main/default/objects/TriggerHandlerSetting__mdt/TriggerHandlerSetting__mdt.object-meta.xml
<CustomObject>
    <description>트리거 이름별 핸들러 클래스</description>
    <label>TriggerHandlerSetting</label>
</CustomObject>