force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/HandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>HandlerClassName__c</fullName>
    <label>HandlerClassName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>