force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/IsRunningTest__c.field-meta.xml
<CustomField>
    <fullName>IsRunningTest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsRunningTest</label>
    <type>Checkbox</type>
</CustomField>