force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/SObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>SObjectApiName__c</fullName>
    <label>SObjectApiName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>