force-app/main/default/objects/TriggerHandlerSetting__mdt/fields/TriggerName__c.field-meta.xml
<CustomField>
    <fullName>TriggerName__c</fullName>
    <label>TriggerName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>